@@ -6,6 +6,8 @@ Changes up to 0.99
 
     beta21
 
+    * added ability to "import pymol" and finish_launching from a method
+
     * added general XYZ file support (not just Tinker XYZ)
 
     beta20
